// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pull request rendering works for condensed unfurls 1`] = `
Object {
  "color": "#36a64f",
  "fallback": "[github-slack/app] #31 Add badges to readme",
  "footer": "<https://github.com/github-slack/app|github-slack/app>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
  ],
  "title": "#31 Add badges to readme",
  "title_link": "https://github.com/github-slack/app/pull/31",
  "ts": 1506092298,
}
`;

exports[`Pull request rendering works for full unfurls 1`] = `
Object {
  "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
  "author_link": "https://github.com/wilhelmklopp",
  "author_name": "wilhelmklopp",
  "color": "#36a64f",
  "fallback": "[github-slack/app] #31 Add badges to readme",
  "fields": Array [
    Object {
      "short": true,
      "title": "Milestone",
      "value": "<https://github.com/github-slack/app/milestone/1|Staff Ship>",
    },
  ],
  "footer": "<https://github.com/github-slack/app|github-slack/app>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "![image](https://user-images.githubusercontent.com/7718702/30750617-39e2fb52-9fb7-11e7-8da1-d6542317bee2.png)
",
  "title": "#31 Add badges to readme",
  "title_link": "https://github.com/github-slack/app/pull/31",
  "ts": 1506092298,
}
`;

exports[`Pull request rendering works for minor notifications 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#6f42c1",
      "fallback": "[github-slack/app] #36 Rearrange logic",
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "Pull request merged by bkeepers",
      "title": "#36 Rearrange logic",
      "title_link": "https://github.com/github-slack/app/pull/36",
      "ts": 1506619320,
    },
  ],
}
`;

exports[`Pull request rendering works for notifcation messages 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "[github-slack/app] #31 Add badges to readme",
      "fields": Array [
        Object {
          "short": true,
          "title": "Milestone",
          "value": "<https://github.com/github-slack/app/milestone/1|Staff Ship>",
        },
      ],
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "Pull request opened by wilhelmklopp",
      "text": "![image](https://user-images.githubusercontent.com/7718702/30750617-39e2fb52-9fb7-11e7-8da1-d6542317bee2.png)
",
      "title": "#31 Add badges to readme",
      "title_link": "https://github.com/github-slack/app/pull/31",
      "ts": 1506092298,
    },
  ],
}
`;

exports[`Pull request rendering works for notifcation messages with all statuses passing 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "[github-slack/app] #31 Add badges to readme",
      "fields": Array [
        Object {
          "short": true,
          "title": "Milestone",
          "value": "<https://github.com/github-slack/app/milestone/1|Staff Ship>",
        },
      ],
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "Pull request opened by wilhelmklopp",
      "text": "![image](https://user-images.githubusercontent.com/7718702/30750617-39e2fb52-9fb7-11e7-8da1-d6542317bee2.png)
",
      "title": "#31 Add badges to readme",
      "title_link": "https://github.com/github-slack/app/pull/31",
      "ts": 1506092298,
    },
    Object {
      "color": "#28a745",
      "fallback": "All checks have passed",
      "footer": "4/4 successful checks",
      "text": ":white_check_mark: All checks have passed",
    },
  ],
}
`;

exports[`Pull request rendering works for notifcation messages with one status failing 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "[github-slack/app] #31 Add badges to readme",
      "fields": Array [
        Object {
          "short": true,
          "title": "Milestone",
          "value": "<https://github.com/github-slack/app/milestone/1|Staff Ship>",
        },
      ],
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "Pull request opened by wilhelmklopp",
      "text": "![image](https://user-images.githubusercontent.com/7718702/30750617-39e2fb52-9fb7-11e7-8da1-d6542317bee2.png)
",
      "title": "#31 Add badges to readme",
      "title_link": "https://github.com/github-slack/app/pull/31",
      "ts": 1506092298,
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/oa/1508?v=4",
      "author_link": "https://travis-ci.org/github-slack/app/builds/278661171?utm_source=github_status&utm_medium=notification",
      "author_name": "continuous-integration/travis-ci/pr: The Travis CI build is pending",
      "color": "#cb2431",
      "fallback": "continuous-integration/travis-ci/pr: The Travis CI build is pending",
      "mrkdwn_in": Array [
        "text",
      ],
    },
  ],
}
`;

exports[`Pull request rendering works for notifcation messages with some statuses passing 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "[github-slack/app] #31 Add badges to readme",
      "fields": Array [
        Object {
          "short": true,
          "title": "Milestone",
          "value": "<https://github.com/github-slack/app/milestone/1|Staff Ship>",
        },
      ],
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "Pull request opened by wilhelmklopp",
      "text": "![image](https://user-images.githubusercontent.com/7718702/30750617-39e2fb52-9fb7-11e7-8da1-d6542317bee2.png)
",
      "title": "#31 Add badges to readme",
      "title_link": "https://github.com/github-slack/app/pull/31",
      "ts": 1506092298,
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/in/254?v=4",
      "author_link": "https://codecov.io/gh/github-slack/app/compare/0143c3cd70052e00bb07dc09229b261b3afd807d...68c2ef08b77a144aeaa69b601ecbacb979e3a8fd",
      "author_name": "codecov/patch: Coverage not affected when comparing 0143c3c...68c2ef0",
      "color": "#cb2431",
      "fallback": "codecov/patch: Coverage not affected when comparing 0143c3c...68c2ef0",
      "mrkdwn_in": Array [
        "text",
      ],
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/in/254?v=4",
      "author_link": "https://codecov.io/gh/github-slack/app/compare/0143c3cd70052e00bb07dc09229b261b3afd807d...68c2ef08b77a144aeaa69b601ecbacb979e3a8fd",
      "author_name": "codecov/project: 98.37% remains the same compared to 0143c3c",
      "color": "#dbab09",
      "fallback": "codecov/project: 98.37% remains the same compared to 0143c3c",
      "mrkdwn_in": Array [
        "text",
      ],
    },
    Object {
      "color": "#28a745",
      "fallback": "2 other checks have passed",
      "footer": "2/4 successful checks",
      "text": ":white_check_mark: 2 other checks have passed",
    },
  ],
}
`;

exports[`Pull request rendering works for notifcation messages with statuses 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "[github-slack/app] #31 Add badges to readme",
      "fields": Array [
        Object {
          "short": true,
          "title": "Milestone",
          "value": "<https://github.com/github-slack/app/milestone/1|Staff Ship>",
        },
      ],
      "footer": "<https://github.com/github-slack/app|github-slack/app>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "Pull request opened by wilhelmklopp",
      "text": "![image](https://user-images.githubusercontent.com/7718702/30750617-39e2fb52-9fb7-11e7-8da1-d6542317bee2.png)
",
      "title": "#31 Add badges to readme",
      "title_link": "https://github.com/github-slack/app/pull/31",
      "ts": 1506092298,
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/oa/1508?v=4",
      "author_link": "https://travis-ci.org/github-slack/app/builds/278661171?utm_source=github_status&utm_medium=notification",
      "author_name": "continuous-integration/travis-ci/pr: The Travis CI build is pending",
      "color": "#dbab09",
      "fallback": "continuous-integration/travis-ci/pr: The Travis CI build is pending",
      "mrkdwn_in": Array [
        "text",
      ],
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/oa/1508?v=4",
      "author_link": "https://travis-ci.org/github-slack/app/builds/278661144?utm_source=github_status&utm_medium=notification",
      "author_name": "continuous-integration/travis-ci/push: The Travis CI build passed",
      "color": "#28a745",
      "fallback": "continuous-integration/travis-ci/push: The Travis CI build passed",
      "mrkdwn_in": Array [
        "text",
      ],
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/in/254?v=4",
      "author_link": "https://codecov.io/gh/github-slack/app/compare/0143c3cd70052e00bb07dc09229b261b3afd807d...68c2ef08b77a144aeaa69b601ecbacb979e3a8fd",
      "author_name": "codecov/patch: Coverage not affected when comparing 0143c3c...68c2ef0",
      "color": "#cb2431",
      "fallback": "codecov/patch: Coverage not affected when comparing 0143c3c...68c2ef0",
      "mrkdwn_in": Array [
        "text",
      ],
    },
    Object {
      "author_icon": "https://avatars2.githubusercontent.com/in/254?v=4",
      "author_link": "https://codecov.io/gh/github-slack/app/compare/0143c3cd70052e00bb07dc09229b261b3afd807d...68c2ef08b77a144aeaa69b601ecbacb979e3a8fd",
      "author_name": "codecov/project: 98.37% remains the same compared to 0143c3c",
      "color": "#cb2431",
      "fallback": "codecov/project: 98.37% remains the same compared to 0143c3c",
      "mrkdwn_in": Array [
        "text",
      ],
    },
  ],
}
`;
